--- a/environment.yml
+++ b/environment.yml
@@ -23,7 +23,7 @@ dependencies:
   - pip=20.0.2=py_2
   - protobuf=3.8.0=py37he1b5a44_2
   - python=3.7.6=h357f687_2
-  - pytorch=1.3.1=py3.7_cuda10.0.130_cudnn7.6.3_0
+  - pytorch=1.3.1
   - scikit-image=0.16.2=py37hb3f55d8_0
   - scikit-learn=0.22.2.post1=py37hcdab131_0
   - scipy=1.4.1=py37h921218d_0
