--- a/environment.yml
+++ b/environment.yml
@@ -33,6 +33,7 @@ dependencies:
   - tqdm=4.46.1=pyh9f0ad1d_0
   - umap-learn=0.3.10=py37_1
   - pip:
+    - cmake==3.18.4
     - multicoretsne==0.1
     - torchsummary==1.5.1
 
